--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,17 @@
 lang: en-US
 
 # Site title
-title: "Scriptor"
+title: "SkynetHosting"
 
 # A description of your site for meta tag, search engine results.
 description: "Scriptor is a minimal, clean, modern & responsive Jekyll theme for writers"
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: ""
+baseurl: "/blog13"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
-url: "https://scriptor-jekyll.netlify.com"
+#url: "https://scriptor-jekyll.netlify.com"
+url: "https://aneesh1985-rgb.github.io"
 
 # Favicon
 favicon: images/favicon.png
@@ -31,11 +32,11 @@ navigation:
   - text: Home
     url: /
   - text: About
-    url: /about/
+    url: /blog13/about/
   - text: Style Guide
-    url: /style-guide/
+    url: /blog13/style-guide/
   - text: Tags
-    url: /tags/
+    url: /blog13/tags/
   - text: Download
     url: https://github.com/JustGoodThemes/Scriptor-Jekyll-Theme
 
