--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ google_analytics: ""
 # Site navigation - each item must have a title and a url.
 navigation:
   - text: Home
-    url: /
+    url: /blog13
   - text: About
     url: /blog13/about/
   - text: Style Guide
