--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 
 # http://jekyllrb.com/docs/pagination/
 paginate: 5
-paginate_path: '/page:num/'
+paginate_path: '/blog13/page:num/'
 
 
 # Permalinks
