--- a/_config.yml
+++ b/_config.yml
@@ -30,13 +30,13 @@ google_analytics: ""
 # Site navigation - each item must have a title and a url.
 navigation:
   - text: Home
-    url: /blog13
+    url: /blog
   - text: About
-    url: /blog13/about/
+    url: /blog/about/
   - text: Style Guide
-    url: /blog13/style-guide/
+    url: /blog/style-guide/
   - text: Tags
-    url: /blog13/tags/
+    url: /blog/tags/
   - text: Download
     url: https://github.com/JustGoodThemes/Scriptor-Jekyll-Theme
 
@@ -57,7 +57,7 @@ plugins:
 
 # http://jekyllrb.com/docs/pagination/
 paginate: 10
-paginate_path: '/blog13/page:num/'
+paginate_path: '/blog/page:num/'
 
 
 # Permalinks
