--- a/_config.yml
+++ b/_config.yml
@@ -12,14 +12,14 @@ lang: en-US
 title: "SkynetHosting"
 
 # A description of your site for meta tag, search engine results.
-description: "Scriptor is a minimal, clean, modern & responsive Jekyll theme for writers"
+description: "Beat Your Competition by Offering Exclusive Features to Your Customers"
 
 # The subpath of your site, e.g. /blog, for generating urls.
-baseurl: "/blog13"
+baseurl: "/blog"
 
 # The base hostname & protocol of your site for where absolute urls are needed.
 #url: "https://scriptor-jekyll.netlify.com"
-url: "https://aneesh1985-rgb.github.io"
+url: "https://skynethosting-inc.github.io"
 
 # Favicon
 favicon: images/favicon.png
